--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -4,7 +4,7 @@
   <div class="flex items-center">
     <!-- ロゴ -->
     <%= link_to '/' do %>
-      <%= image_tag 'logo3.jpg', alt: "Memo Sprout logo", class: "h-14 py-2 w-auto object-contain" %>
+      <%= image_tag 'logo2.png', alt: "Memo Sprout logo", class: "h-14 py-1 w-auto object-contain" %>
     <% end %>
     <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
     <h2 class="text-base leading-8 text-gray-900 whitespace-nowrap hidden md:block md:pl-4">
