--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title %>
-<div class="hero min-h-screen" style="background-image: url('<%= asset_path('background.png') %>');">
+<div class="hero min-h-screen" style="background-image: url('<%= asset_path('background.webp') %>');">
   <div class="hero-overlay bg-opacity-50"></div>
     <div class="hero-content text-neutral-content text-center flex-col">
       <h1 class="mb-12 text-3xl md:text-4xl lg:text-5xl font-bold">自分を深く知る5分間</h1>
@@ -13,13 +13,73 @@
   </div>
 </div>
 
+  <div class="bg-gray-300">
+    <!-- グリッドコンテナ -->
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 px-4 pt-8 pt-10 lg:pt-20">
+      <!-- カード1 -->
+      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-end">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">どんな気持ちも大切に</h2>
+          <p class="text-sm lg:text-base">嬉しいことも、悲しいことも。<br>複数の感情に対応し<br>あなたの感じたすべてを記録に残せます。</p>
+          <%= image_tag 'memo.jpg', class: "w-1/4 mt-3" %>
+        </div>
+      </div>
+      <!-- カード2 -->
+      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-start">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">本当の気持ちを見つける</h2>
+          <p class="text-sm lg:text-base">出来事を掘り下げることで<br>自分でも気づかなかった<br>本音や考えを発見できます。</p>
+          <%= image_tag 'note.jpg', class: "w-1/3 mt-6" %>
+        </div>
+      </div>
+      <!-- カード3 -->
+      <div class="card bg-white w-full md:w-9/12 md:col-span-2 shadow-2xl mx-auto">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">習慣化をサポート</h2>
+          <p class="text-sm lg:text-base">1日1投稿で連続記録を更新しましょう。<br>習慣化することで<br>毎日がもっと充実します。</p>
+          <%= image_tag 'light.jpg', class: "w-2/5 lg:w-1/4 mt-6" %>
+        </div>
+      </div>
+      <!-- カード4 -->
+      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-end">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">お気に入り機能</h2>
+          <p class="text-sm lg:text-base lg:pt-4">あなたにとって<br>特別な記録を選んで保存。<br><br>思い出を振り返る楽しさを味わえます。</p>
+          <%= image_tag 'check.jpg', class: "w-1/3 mt-6" %>
+        </div>
+      </div>
+      <!-- カード5 -->
+      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-start">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">自分だけの時間</h2>
+          <p class="text-sm lg:text-base">頭の中を整理し、<br>感じたことを書き留める。<br><br>自分自身と向き合うひとときを<br>作りましょう。</p>
+          <%= image_tag 'coffee.jpg', class: "w-1/3 mt-6" %>
+        </div>
+      </div>
+      <!-- カード6 -->
+      <div class="card bg-white w-full md:w-9/12 md:col-span-2 shadow-2xl mx-auto mb-8">
+        <div class="card-body items-center text-center">
+          <h2 class="card-title my-3">書くことが、心の整理のカギ</h2>
+          <p class="text-sm lg:text-base">記録は、あなたの気持ちや考えを<br>整理する最初の一歩。<br>頭の中を言葉にしてみませんか？</p>
+          <%= image_tag 'pen.jpg', class: "w-2/5 lg:w-1/4 mt-6" %>
+        </div>
+      </div>
+    </div>
+  </div><!-- グリッドコンテナ終了 -->
+
+  <div class="grid justify-items-center bg-gray-300">
+    <div class="py-10 mb-10">
+      <%= link_to 'メモを作成する', '#login-section', class: 'btn btn-wide' %>
+    </div>
+  </div>
+
 <div id="login-section"> <!-- アンカー -->
   <% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
     <div class="hero bg-base-200">
       <div class="hero-content flex-col lg:flex-row-reverse my-8 lg:h-[110vh]">
         <!-- 大きい画面の場合のみ表示する画像 -->
         <div class="md:text-center lg:scale-50 rounded-lg hidden lg:block">
-          <%= image_tag 'login_image.png' %>
+          <%= image_tag 'login_image.jpg' %>
         </div>
 
         <!-- ログインフォーム -->
@@ -57,63 +117,3 @@
     </div>
   <% end %>
 </div>
-
-  <div class="bg-gray-300">
-    <!-- グリッドコンテナ -->
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8 px-4 pt-8 pt-10 lg:pt-20">
-      <!-- カード1 -->
-      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-end">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">どんな気持ちも大切に</h2>
-          <p class="text-sm lg:text-base">嬉しいことも、悲しいことも。<br>複数の感情に対応し<br>あなたの感じたすべてを記録に残せます。</p>
-          <%= image_tag 'memo.png', class: "w-1/4 mt-3" %>
-        </div>
-      </div>
-      <!-- カード2 -->
-      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-start">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">本当の気持ちを見つける</h2>
-          <p class="text-sm lg:text-base">出来事を掘り下げることで<br>自分でも気づかなかった<br>本音や考えを発見できます。</p>
-          <%= image_tag 'note.png', class: "w-1/3 mt-6" %>
-        </div>
-      </div>
-      <!-- カード3 -->
-      <div class="card bg-white w-full md:w-9/12 md:col-span-2 shadow-2xl mx-auto">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">習慣化をサポート</h2>
-          <p class="text-sm lg:text-base">1日1投稿で連続記録を更新しましょう。<br>習慣化することで<br>毎日がもっと充実します。</p>
-          <%= image_tag 'light.png', class: "w-2/5 lg:w-1/4 mt-6" %>
-        </div>
-      </div>
-      <!-- カード4 -->
-      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-end">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">お気に入り機能</h2>
-          <p class="text-sm lg:text-base lg:pt-4">あなたにとって<br>特別な記録を選んで保存。<br><br>思い出を振り返る楽しさを味わえます。</p>
-          <%= image_tag 'check.png', class: "w-1/3 mt-6" %>
-        </div>
-      </div>
-      <!-- カード5 -->
-      <div class="card bg-white w-full md:w-9/12 shadow-2xl justify-self-start">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">自分だけの時間</h2>
-          <p class="text-sm lg:text-base">頭の中を整理し、<br>感じたことを書き留める。<br><br>自分自身と向き合うひとときを<br>作りましょう。</p>
-          <%= image_tag 'coffee.png', class: "w-1/3 mt-6" %>
-        </div>
-      </div>
-      <!-- カード6 -->
-      <div class="card bg-white w-full md:w-9/12 md:col-span-2 shadow-2xl mx-auto mb-8">
-        <div class="card-body items-center text-center">
-          <h2 class="card-title my-3">書くことが、心の整理のカギ</h2>
-          <p class="text-sm lg:text-base">記録は、あなたの気持ちや考えを<br>整理する最初の一歩。<br>頭の中を言葉にしてみませんか？</p>
-          <%= image_tag 'pen.png', class: "w-2/5 lg:w-1/4 mt-6" %>
-        </div>
-      </div>
-    </div>
-  </div><!-- グリッドコンテナ終了 -->
-
-  <div class="grid justify-items-center bg-gray-300">
-    <div class="py-10 mb-10">
-      <%= link_to 'メモを作成する', '#login-section', class: 'btn btn-wide' %>
-    </div>
-  </div>
