--- a/app/views/memo_favorites/index.html.erb
+++ b/app/views/memo_favorites/index.html.erb
@@ -1,9 +1,8 @@
-<div class="mb-20">
-  <div class="mx-auto max-w-7xl px-6 md:px-36">
-    <div class="mx-auto max-w-2xl text-center">
+  <div class="layout-container">
+    <div class="inner-box">
       <% content_for :title, t('.title') %>
-      <!-- メモ一覧 -->
-      <h1 class="text-3xl py-14"><%= t('.title') %></h1>
+      <!-- お気に入り一覧 -->
+      <h1><%= t('.title') %></h1>
 
       <!-- お気に入りがない場合 -->
       <% if @memo_favorites.empty? %>
@@ -24,4 +23,3 @@
       <% end %>
     </div>
   </div>
-</div>
