--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-theme="mytheme">
   <head>
     <title><%= page_title %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -38,7 +38,7 @@
     <%= display_meta_tags(default_meta_tags) %>
   </head>
 
-  <body class="bg-base-200 flex flex-col min-h-screen">
+  <body class="flex flex-col min-h-screen">
     <header class="sticky top-0 left-0 right-0 w-full shadow-md z-10">
       <% if logged_in? %>
         <%= render "shared/header" %>
@@ -50,6 +50,8 @@
     <main class="flex-grow">
       <%= yield %>
     </main>
-    <%= render "shared/footer" %>
+    <footer class="custom-footer">
+      <%= render "shared/footer" %>
+    </footer>
   </body>
 </html>
