--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,10 @@
-<footer class="footer footer-center bg-gray-400 text-base-content rounded p-8 position-absolute bottom-0 mx-auto">
-  <nav class="grid grid-flow-col gap-4">
+<footer class="position-absolute">
+  <nav class="grid grid-flow-col gap-8">
     <%= link_to t('shared._footer.terms'), terms_of_service_path, class: "link link-hover" %>
     <%= link_to t('shared._footer.privacy'), privacy_policy_path, class: "link link-hover" %>
     <%= link_to t('shared._footer.contact'), "https://forms.gle/B8L13hSeEwb19WFX8", class: "link link-hover" %>
   </nav>
   <aside>
-    <p>© 2024. Memo Sprout</p>
+    <p class="pt-6">© 2024. Memo Sprout</p>
   </aside>
 </footer>
