--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100 h-16 flex justify-between shadow">
+<div class="custom-header">
 
   <!-- 左側要素 -->
   <div class="flex items-center">
@@ -7,13 +7,21 @@
       <%= image_tag 'logo2.png', alt: "Memo Sprout logo", class: "h-14 py-1 w-auto object-contain" %>
     <% end %>
     <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
-    <h2 class="text-base leading-8 text-gray-900 whitespace-nowrap hidden md:block md:pl-4">
+    <h2 class="text-base leading-8 whitespace-nowrap hidden md:block md:pl-4">
       - <%= t('shared._header.catchphrase') %> -
     </h2>
   </div>
 
   <!-- 右側要素 -->
   <div class="flex items-stretch justify-end min-w-0 gap-2">
+    <!-- ログインフォームへのリンク -->
+    <div class="btn btn-outline btn-primary rounded-btn px-3 md:px-4 font-bold">
+      <% if request.path == root_path %>
+        <%= link_to t('shared._header_before_login.login'), '#login-section' %>
+      <% else %>
+        <%= link_to t('shared._header_before_login.login'), '/' %>
+      <% end %>
+    </div>
     <!-- ハンバーガーメニュー -->
     <div class="dropdown dropdown-end">
       <div tabindex="0" role="button" class="btn btn-ghost rounded-btn px-2 md:px-4 text-2xl">
