--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -6,9 +6,9 @@
 
     <!-- メモが存在する場合 -->
     <% if @memos.present? %>
-      <div class="border bg-white mb-10">
+      <div class="bg-base-100 pb-4">
         <!-- 「最終更新のメモ」 -->
-        <div class="block font-bold bg-[#eae1d0] py-4 flex-auto">
+        <div class="block font-bold bg-[#b79d7e] py-4 flex-auto">
             <%= t('.last_update_memo') %>
         </div>
         <!-- 日付 -->
@@ -28,18 +28,21 @@
   </div>
 
   <!-- メモ一覧 -->
-  <div class="mx-auto max-w-5xl">
+  <div class="mx-auto max-w-4xl">
   <% @memos.each do |memo| %>
+      <% selected_emotion = emotion_options.find { |_, value, _| value == memo.emotion } %>
+      <% emotion_color = selected_emotion ? selected_emotion[2] : "text-gray-500" %> <!-- 選択された感情の色を取得 -->
+
     <div id="memo-<%= memo.id %>">
       <%= link_to memo_path(memo), class: "w-full block" do %>
-        <div class="border flex w-full items-center hover:bg-[#eae1d0] relative">
+        <div class="border flex w-full items-center bg-base-100 hover:bg-[#F4F2E7] relative">
           <!-- 日付 -->
           <div class="flex justify-start ml-4 text-sm lg:text-base">
             <%= memo.date || t('.no_date') %>
           </div>
 
           <!-- Whatの内容 -->
-          <div class="font-bold text-center mb-6 w-3/5 mx-auto truncate text-base lg:text-lg">
+          <div class="font-bold text-center mb-6 w-3/5 mx-auto truncate text-sm lg:text-base <%= emotion_color %>">
             <%= JSON.parse(memo.memo_content)["what"] %>
           </div>
 
@@ -70,7 +73,7 @@
       <div class="py-8">
         <%= simple_format t('.no_memo') %> <!-- 「記録がありませんー」 -->
       </div>
-      <%= link_to t('.create_new'), new_memo_path, class: "btn btn-active mb-10" %> <!-- 「メモを作成する」 -->
+      <%= link_to t('.create_new'), new_memo_path, class: "btn btn-info" %> <!-- 「メモを作成する」 -->
     <% end %>
 
 </div>
