refactor: プライバシーポリシー・利用規約にカスタムクラス適用

--- a/app/views/shared/privacy_policy.html.erb
+++ b/app/views/shared/privacy_policy.html.erb
@@ -1,7 +1,6 @@
-<div class="mb-20">
-  <div class="mx-auto max-w-7xl px-9 text-sm md:text-base">
-    <div class="mx-auto max-w-2xl">
-      <h1 class="text-3xl py-20 text-center">プライバシーポリシー</h1>
+<div class="layout-container">
+  <div class="inner-box text-left">
+      <h1 class="text-center">プライバシーポリシー</h1>
 
       <h2 class="text-lg font-semibold mb-3 text-left">お客様から取得する情報</h2>
       <p>本アプリは、お客様から以下の情報を取得します。</p>
@@ -63,4 +62,3 @@
       <p class="text-right">2024年12月27日制定</p>
     </div>
   </div>
-</div>
